Refactor CSRF middleware to include autoprint tasks path; update iframe dimensions and window size in AlwaysTopOn component; adjust printHTML function to disable landscape mode and ensure task deletion occurs after printing.

--- a/apps/autoprint-nwjs/package.json
+++ b/apps/autoprint-nwjs/package.json
@@ -2,7 +2,7 @@
   "name": "autoprint",
   "version": "1.0.0",
   "scripts": {
-    "runapp": "nw ./app",
+    "runapp": "nw ./",
     "bw": "./build.sh"
   },
   "devDependencies": {
